--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3.component.html
@@ -60,12 +60,15 @@
               บันทึก
             </button>
             <button class="ui mini primary button" (click)="modalConditionRL()">
+              <i class="setting icon"></i>
               กำหนดเงื่อนไขความเสี่ยง
             </button>
-            <button class="ui mini primary button" (click)="addRiskAssRiskWsHdr()">
+            <button class="ui mini yellow button" (click)="addRiskAssRiskWsHdr()">
+              <i class="print icon"></i>
               ส่งออก
             </button>
-            <button class="ui mini primary button" (click)="cancelFlow()">
+            <button class="ui mini  button" (click)="cancelFlow()">
+              <i class="remove icon"></i>
               ยกเลิก
             </button>
           </div>
