fix Button int083

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3.component.html
@@ -33,7 +33,7 @@
           </div>
         </div>
 
-        <table id="dataTable" class="ui celled table striped selectable ">
+        <table id="dataTable" class="ui celled table striped selectable " style="width: 100%;">
           <thead>
             <tr>
               <th rowspan="2" style="text-align: center !important">ลำดับ</th>
