--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-4/int08-3-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-4/int08-3-4.component.html
@@ -101,8 +101,8 @@
           <div class="inline fields">
             <div class="sixteen wide field ">
               <div class="seven wide field "></div>
-              <button class="ui mini primary button" (click)="addObjRiskDtl() ">
-                <i class="save icon"></i>
+              <button class="ui mini green button" (click)="addObjRiskDtl() ">
+                <i class="plus icon"></i>
                 เพิ่ม
               </button>
 
@@ -130,12 +130,12 @@
 
               <div class="ui center aligned grid">
                 <div class="four wide column">
-                  <button class="ui mini primary button" type="submit">
+                  <button class="ui mini yellow button" type="submit">
                     <i class="upload icon"></i>
                     อัพโหลด
                   </button>
-                  <button class="ui mini button" type="reset">
-                    <i class="trash outline icon"></i>
+                  <button class="ui mini red button" type="reset">
+                    <i class="trash alternate icon"></i>
                     ลบไฟล์
                   </button>
                 </div>
@@ -144,7 +144,7 @@
           </form>
         </div>
 
-        <table id="dataTable" class="ui small celled table striped">
+        <table id="dataTable" class="ui small celled table striped" style="width: 100%;">
           <thead>
             <tr>
               <th rowspan="2" style="text-align: center !important">ลำดับ</th>
@@ -168,12 +168,15 @@
               บันทึก
             </button>
             <button class="ui mini primary button" (click)="modalConditionRL()">
+              <i class="setting icon"></i>
               กำหนดเงื่อนไขความเสี่ยง
             </button>
-            <button class="ui mini primary button" (click)="addRiskAssRiskWsHdr()">
+            <button class="ui mini yellow button" (click)="addRiskAssRiskWsHdr()">
+              <i class="print icon"></i>
               ส่งออก
             </button>
-            <button class="ui mini primary button" (click)="cancelFlow()">
+            <button class="ui mini  button" (click)="cancelFlow()">
+              <i class="remove icon"></i>
               ยกเลิก
             </button>
           </div>
