--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-2-2/int06-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-2-2/int06-2-2.component.html
@@ -270,7 +270,7 @@
         <br><br>
         <div class="ui stackable center aligned page grid">
           <button class="ui mini primary button" type="submit"><i class="save icon"></i> บันทึก</button>
-          <button class="ui mini gray button" type="button" routerLink="/int06/1/2-1"><i class="reply icon"></i>ยกเลิก</button>
+          <button class="ui mini button" type="button" routerLink="/int06/1/2-1"><i class="close icon"></i>ยกเลิก</button>
         </div><br>
       </form>
     </div>
