--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
@@ -17,8 +17,8 @@
           <div class="four wide field ">
             <div class="ui calendar" style="width:100%" id="year">
               <div class="ui input left icon">
-               <i class="calendar alternate outline icon"></i>
-                <input type="calendar" id="budgetYear" placeholder="ปี" maxlength="4" name="budgetYear" [(ngModel)]="budgetYear" readonly=""
+               <i class="calendar alter nate outline icon"></i>
+                <input type="calendar" id="budgetYear" placeholder="ปปปป" maxlength="4" name="budgetYear" [(ngModel)]="budgetYear" readonly=""
                   autocomplete="off">
               </div>
             </div>
@@ -56,7 +56,7 @@
         <thead>
           <tr>
             <!-- <th></th> -->
-            <th style="text-align: center !important">ที่</th>
+            <th style="text-align: center !important">ลำดับที่</th>
             <th style="text-align: center !important" class="four wide field ">ชื่อกระดาษทำการ</th>
             <th style="text-align: center !important" class="four wide field ">ปัจจัยเสี่ยง</th>
             <th style="text-align: center !important">ปีงบประมาณ</th>
@@ -140,7 +140,7 @@
           <table id="dataTableF1" class="ui small celled table nowrap striped selectable" style="width: 100%;">
             <thead>
               <tr>
-                <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+                <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
                 <th rowspan="2" style="text-align: center !important">โครงการตามยุทธศาสตร์</th>
                 <th colspan="4" style="text-align: center !important">งบประมาณที่ใช้ตามแผนยุทธศาสตร์</th>
                 <th rowspan="2" style="text-align: center !important">เงินงบประมาณที่กรมอนุมัติ</th>
@@ -245,7 +245,7 @@
           <table id="dataTableF2" class="ui small celled table nowrap striped selectable" style="width: 100%;">
             <thead>
               <tr>
-                <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+                <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
                 <th rowspan="2" style="text-align: center !important">โครงการตามยุทธศาสตร์</th>
                 <th rowspan="2" style="text-align: center !important">หน่วยงาน</th>
                 <th rowspan="2" style="text-align: center !important">ค่าความเสี่ยง</th>
@@ -345,7 +345,7 @@
           <table id="dataTableF3" class="ui small celled table nowrap striped selectable" style="width: 100%;">
             <thead>
               <tr>
-                <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+                <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
                 <th rowspan="2" style="text-align: center !important">โครงการตามยุทธศาสตร์</th>
                 <th rowspan="2" style="text-align: center !important">หน่วยงาน</th>
                 <th rowspan="2" style="text-align: center !important">สถานะ</th>
