--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-4/int08-1-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-4/int08-1-4.component.html
@@ -28,7 +28,7 @@
           <thead>
             <tr>
 
-              <th style="text-align: center !important">ที่</th>
+              <th style="text-align: center !important">ลำดับที่</th>
               <th style="text-align: center !important">ปัจจัยเสี่ยง</th>
               <th style="text-align: center !important">ปีงบประมาณ</th>
               <th style="text-align: center !important">วันที่สร้าง</th>
