--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
@@ -14,8 +14,8 @@
           <div class="four wide field ">
             <div class="ui calendar" style="width:100%" id="year">
               <div class="ui input left icon">
-                <i class="calendar alternate outline icon"></i>
-                <input type="calendar" id="budgetYear" placeholder="ปี" maxlength="4" name="budgetYear" [(ngModel)]="budgetYear"
+                <i class="calendar alter nate outline icon"></i>
+                <input type="calendar" id="budgetYear" placeholder="ปปปป" maxlength="4" name="budgetYear" [(ngModel)]="budgetYear"
                   readonly="" autocomplete="off">
               </div>
             </div>
@@ -57,13 +57,13 @@
           <thead>
             <tr>
               <!-- <th style="text-align: center !important">#</th> -->
-              <th style="text-align: center !important">ที่</th>
+              <th style="text-align: center !important">ลำดับที่</th>
               <th style="text-align: center !important" class="four wide field ">ชื่อกระดาษทำการ</th>
               <th style="text-align: center !important" class="four wide field ">ปัจจัยเสี่ยง</th>
               <th style="text-align: center !important">ปีงบประมาณ</th>
               <th style="text-align: center !important">วันที่สร้าง</th>
               <th style="text-align: center !important">ผู้สร้าง</th>
-              <th style="text-align: center !important">Action</th>
+              <th style="text-align: center !important">จัดการ</th>
             </tr>
           </thead>
         </table>
@@ -154,7 +154,7 @@
           <table id="dataTableF1" class="ui small celled table nowrap striped selectable" style="width: 140%;">
             <thead>
               <tr>
-                <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+                <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
                 <th rowspan="2" style="text-align: center !important" class="four wide field ">ระบบสารสนเทศฯ
                   ของกรมสรรพสามิต</th>
                 <th rowspan="2" style="text-align: center !important">ม.ค.</th>
@@ -173,8 +173,8 @@
                 <th colspan="2" style="text-align: center !important">ประเมินความเสี่ยง</th>
               </tr>
               <tr>
-                <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">RL</th>
-                <th style="text-align: center !important">แปลค่า</th>
+                <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">อัตราความเสี่ยง</th>
+                <th style="text-align: center !important">แปลค่าความเสี่ยง</th>
               </tr>
 
             </thead>
@@ -266,15 +266,15 @@
           <table id="dataTableF2" class="ui small celled table nowrap striped selectable" style="width: 100%;">
             <thead>
               <tr>
-                <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+                <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
                 <th rowspan="2" style="text-align: center !important" class="ten wide field ">ระบบสารสนเทศฯ
                   ของกรมสรรพสามิต</th>
                 <th rowspan="2" style="text-align: center !important" class="two wide field ">ค่าความเสี่ยง</th>
                 <th colspan="2" style="text-align: center !important">ประเมินความเสี่ยง</th>
               </tr>
               <tr>
-                <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">RL</th>
-                <th style="text-align: center !important">แปลค่า</th>
+                <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">อัตราความเสี่ยง</th>
+                <th style="text-align: center !important">แปลค่าความเสี่ยง</th>
               </tr>
             </thead>
           </table>
