--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-2/int08-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-2/int08-2-2.component.html
@@ -26,13 +26,13 @@
                   <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%;">
                     <thead>
                       <tr>
-                        <th style="text-align: center !important">ลำดับ</th>
+                        <th style="text-align: center !important">ลำดับที่</th>
                         <th style="text-align: center !important" >ปัจจัยเสี่ยง</th>
                         <th style="text-align: center !important">ปีงบประมาณ</th>
                         <th style="text-align: center !important">วันที่สร้าง</th>
                         <th style="text-align: center !important">ผู้สร้าง</th>
                         <th style="text-align: center !important">สถานะการใช้งาน</th>
-                        <th style="text-align: center !important">Action</th>
+                        <th style="text-align: center !important">จัดการ</th>
                       </tr>
                     </thead>
                   </table>
