--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-2-1/int06-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-2-1/int06-2-1.component.html
@@ -40,7 +40,7 @@
             
           </div>
         </div>
-        <br><br><br><br>
+        <br><br>
         <div class="ui stackable center aligned page grid">
           <button class="ui mini primary button" type="button" (click)="search()"><i class="search icon"></i> ค้นหา</button>
           <button class="ui mini gray button" type="button" (click)="clear()"><i class="sync icon"></i> ล้างข้อมูล</button>
@@ -56,7 +56,7 @@
   <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%">
     <thead>
       <tr style="text-align: center;">
-        <th rowspan="2">ลำดับ</th>
+        <th rowspan="2">ลำดับที่</th>
         <th rowspan="2">รหัสบัญชี</th>
         <th rowspan="2">ชื่อบัญชี</th>
         <th colspan="3">กิจกรรม (รับโอนจากกรมฯ)</th>
