--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-6/int07-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-6/int07-6.component.html
@@ -9,13 +9,14 @@
 
     <div class="ui attached segment ">
       <form id="upload-form" class="ui form" (submit)="onUpload($event)" ngNativeValidate>
-        <div class="inline fields">
-          <div class="four wide field"></div>
-          <div class="two wide field"></div>
+        <div class="inline fields ui centered grid">
+           <div class="one wide field "></div>
+          <div class="three wide field required">
+              <label class="text-right full-width">รายงานเคลื่อนไหวเงินฝากคลัง</label>
+          </div>
           <div class="five wide field">
             <input id="fileExel" type="file" name="fileExel" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-excel" (change)="onChangeUpload($event)" required>
           </div>
-          <div class="two wide field"></div>
           <div class="three wide field"></div>
         </div>
 
@@ -28,6 +29,10 @@
             <button class="ui mini button" type="reset" (click)="clearData()" >
               <i class="refresh icon"></i>
               ล้างข้อมูล
+            </button>
+            <button class="ui mini green button" [disabled]="dataList.length==0" (click)="checkData()" >
+              <i class="clipboard check icon"></i>
+              ตรวจสอบข้อมูล
             </button>
           </div>
         </div>
@@ -63,14 +68,7 @@
           </thead>
         </table>
 
-        <div class="ui six column centered grid" >
-            <div class="column">
-              <button class="ui mini green button" [disabled]="dataList.length==0" (click)="checkData()" >
-                <i class="clipboard check icon"></i>
-                ตรวจสอบข้อมูล
-              </button>
-            </div>
-        </div>
+      
       </div>
       <!-- modal Edit -->
       <!-- <div class="ui modal" id="editData" >
