--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -61,7 +61,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/ope04-8">กระดาษทำการตรวจสอบด้านราคา</a>
+                                                            <a href="javascript:;" routerLink="/ope04/8">กระดาษทำการตรวจสอบด้านราคา</a>
                                                         </div>
                                                     </div>
                                                 </div>
