--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-8/ope04-8.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-8/ope04-8.component.html
@@ -2,154 +2,123 @@
   <div class="sixteen wide column">
     <h2 class="ui header">สร้างกระดาษทำการตรวจสอบด้านราคา</h2>
 
-    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+    <div class="ui top attached header segment" style="background: #1e83db;color: white">
       <span>Criteria</span>
     </div>
 
-    <div class="ui attached segment">
-      <div class="ui form">
-        <div class="inline fields">
-          <div class="eight wide field ">
-            <label class="custom-label-w-25">ทะเบียนสรรพสามิต</label>
-            <input type="text" class="custom-readonly" placeholder="ทะเบียนสรรพสามิต" readonly="" value="2560-00178-5">
+    <div class="ui attached segment {{loading ? 'loading' : ''}}">
+      <form class="ui form" id="form" [formGroup]="formControl" (submit)="search()">
+        <!-- row 1 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field required">
+            <label class="text-right full-width">ทะเบียนสรรพสามิต</label>
           </div>
-          <div class="eight wide field ">
-            <label class="custom-label-w-20">เลขประจำตัวผู้เสียภาษี</label>
-            <input type="text" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี" readonly="" value="1-5599-00168-99-6">
+          <div class="four wide field" [ngClass]="{ 'error': submitted && f.exciseId.invalid }">
+            <select name="exciseId " id="exciseId" class="ui dropdown ai search full-width office" formControlName="exciseId" (change)="changeExciseId($event)">
+              <option value="">กรุณาเลือก</option>
+              <option *ngFor="let item of exciseIdList" value="{{item.value}}">{{item.label}}</option>
+
+            </select>
+          </div>
+          <div class="three wide field ">
+            <label class="text-right full-width">เลขประจำตัวผู้เสียภาษี</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" class="custom-readonly" disabled formControlName="userNumber" name="userNumber">
           </div>
         </div>
 
-        <div class="inline fields">
-          <div class="eight wide field">
-            <label class="custom-label-w-25">ผู้ประกอบการ </label>
-            <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" readonly="" value="บ. ฮอนด้า มอเตอร์ ประเทศไทย">
+        <!-- row 2 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field ">
+            <label class="text-right full-width">ผู้ประกอบการ</label>
           </div>
-          <div class="eight wide field ">
-            <label class="custom-label-w-20">เลขที่วิเคราะห์</label>
-            <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" readonly="" value="256000000001">
+          <div class="four wide field ">
+            <input type="text" class="custom-readonly" disabled formControlName="entrepreneur" name="entrepreneur">
+          </div>
+          <div class="three wide field ">
+            <label class="text-right full-width">เลขที่วิเคราะห์</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" class="custom-readonly" disabled formControlName="anlysisNumber" name="anlysisNumber">
           </div>
         </div>
 
-        <div class="inline fields">
-          <div class="eight wide field required">
-            <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
-            <div class="eight wide field">
-              <div class="ui icon input">
-                <input type="text" class="custom-readonly" placeholder="ดด/ปปปป" value="11/2560" readonly="">
-                <i class="add to calendar icon"></i>
+        <!-- row 3 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field ">
+            <label class="text-right full-width">ประเภท</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" class="custom-readonly" disabled formControlName="type" name="type">
+          </div>
+          <div class="three wide field ">
+            <label class="text-right full-width">พิกัด</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" class="custom-readonly" disabled formControlName="coordinates" name="coordinates">
+          </div>
+        </div>
+
+        <!-- row 4 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field required">
+            <label class="text-right full-width">รอบระยะเวลาการตรวจสอบ</label>
+          </div>
+          <div class="four wide field" [ngClass]="{ 'error': submitted && f.dateFrom.invalid }">
+            <div class="ui calendar full-width" id="dateF">
+              <div class="ui input left icon">
+                <i class="clock icon"></i>
+                <input name="dateFrom" formControlName="dateFrom" type="text" id="dateFrom" autocomplete="off"
+                  [attr.readonly]="null" placeholder="ดด/ปปปป" [attr.required]="true">
               </div>
             </div>
-            <div class="eight wide field">
-              <label>-</label>
-              <div class="ui icon input">
-                <input type="text" class="custom-readonly" placeholder="ดด/ปปปป" value="11/2560" readonly="">
-                <i class="add to calendar icon"></i>
+          </div>
+          <div class="three wide field required">
+            <label class="text-right full-width">ถึง</label>
+          </div>
+          <div class="four wide field " [ngClass]="{ 'error': submitted && f.dateTo.invalid }">
+            <div class="ui calendar full-width" id="dateT">
+              <div class="ui input left icon">
+                <i class="clock icon"></i>
+                <input name="dateTo" formControlName="dateTo" type="text" id="dateTo" autocomplete="off"
+                  [attr.readonly]="null" placeholder="ดด/ปปปป" [attr.required]="true">
               </div>
             </div>
           </div>
         </div>
-
-        <div class="inline fields">
-          <div class="eight wide field">
-            <label class="custom-label-w-25">ประเภท </label>
-            <input type="text" class="custom-readonly" placeholder="" readonly="" value="สินค้า">
-          </div>
-          <div class="eight wide field ">
-            <label class="custom-label-w-20">พิกัด</label>
-            <input type="text" class="custom-readonly" placeholder="" readonly="" value="รถยนต์">
-          </div>
-        </div>
-
-      </div>
+        <br><br>
+        <div class="ui stackable center aligned page grid">
+          <button class="ui mini primary button" type="submit"><i class="file outline icon"></i>
+            แสดงกระดาษทำการ</button>
+          <button class="ui mini gray button" type="button" (click)="claer()"><i class="sync icon"></i> ล้างข้อมูล</button>
+        </div><br>
+      </form>
     </div>
 
-    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>อัพโหลด Template ข้อมูลปริมาณการตรวจสอบด้านราคา</span>
-    </div>
-
-    <div class="ui attached segment">
-      <div class="ui form">
-        <div class="inline fields">
-          <div class="eight wide field ">
-            <label class="custom-label-w-25">เลือกไฟล์ Template ข้อมูล</label>
-            <input type="file" />
-          </div>
-        </div>
-      </div>
-
-      <div class="ui center aligned grid">
-        <div class="four wide column">
-          <button class="ui mini primary button" (click)="uploadData()">
-            <i class="upload icon"></i>
-            อัพโหลด
-          </button>
-          <button class="ui mini button" (click)="clearData()">
-            <i class="trash outline icon"></i>
-            ลบไฟล์
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <div class="ui segment">
+    <div class="ui segment" id="Dtable">
       <div class="ui grid center aligned">
         <div class="sixteen wide column">
-          บ. ฮอนด้า มอเตอร์ ประเทศไทย
-          <br> กระดาษทำการตรวจสอบด้านราคา
-          <br> เดือน พ.ย. 2559 - ส.ค. 2559
+          {{form.entrepreneur}}
+          <br> กระดาษทำการรับวุตถุดิบ
+          <br> เดือน {{form.dateFrom}} - {{form.dateTo}}
         </div>
       </div>
       <br>
 
-      <table class="ui celled table striped selectable">
+      <table id="dataTable" class="ui small celled table striped selectable nowrap" style="width: 100%">
         <thead>
-          <tr style="text-align: center">
-            <th>ลำดับ</th>
-            <th>รายการ</th>
-            <th>ราคาตามแบบแจ้ง
-              <br> ภส 02-01 </th>
-            <th>ราคาจากข้อมูลภายนอก</th>
-            <th>ราคาต่อหน่วยจากการตรวจสอบ</th>
-            <th>แบบรายการภาษี ภส 03-07 </th>
-            <th>ผลต่างราคา</th>
+          <tr>
+            <th class="text-center">ลำดับ</th>
+            <th class="text-center">รายการ</th>
+            <th class="text-center">ราคาสินค้าตามแบบแจ้ง</th>
+            <th class="text-center">ราคาจากข้อมูลภายนอก</th>
+            <th class="text-center">ราคาต่อหน่วยตามประกาศกรมสรรพสามิต</th>
+            <th class="text-center">ราคาจากการตรวจสอบ</th>
+            <th class="text-center">ราคาต่อหน่วยจากรายการภาษี ภส 03-07</th>
+            <th class="text-center">ผลต่างราคา</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td class="right aligned">1</td>
-            <td>C 16M DOM-RS CVT ZA7</td>
-            <td class="right aligned">350 </td>
-            <td class="right aligned">450 </td>
-            <td class="right aligned">450 </td>
-            <td class="right aligned">400 </td>
-            <td class="right aligned">
-              <span class="ui red horizontal label right aligned" style="float: right;">50</span>
-            </td>
-          </tr>
-          <tr>
-            <td class="right aligned">2</td>
-            <td>C 16M DOM-18.S CVT ZB7</td>
-            <td class="right aligned">370 </td>
-            <td class="right aligned">450 </td>
-            <td class="right aligned">450 </td>
-            <td class="right aligned">460 </td>
-            <td class="right aligned">
-              <span class="ui green horizontal label right aligned" style="float: right;">10</span>
-            </td>
-          </tr>
-          <tr>
-            <td class="right aligned">3</td>
-            <td>C 16M DOM-1.8EL CVT ZA5</td>
-            <td class="right aligned">100 </td>
-            <td class="right aligned">100 </td>
-            <td class="right aligned">100 </td>
-            <td class="right aligned">100 </td>
-            <td class="right aligned">
-              <span class="ui green horizontal label right aligned" style="float: right;">0</span>
-            </td>
-          </tr>
-        </tbody>
-
       </table>
 
       <br>
@@ -168,13 +137,28 @@
     </div>
 
     <br>
-    <div class="ui grid center aligned">
-      <div class="sixteen wide column">
-        <button class="ui mini button" routerLink="/select-form/สินค้า/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
-          <i class="arrow left icon"></i>
-          ย้อนกลับ
-        </button>
-      </div>
+    <div class="ui top attached header segment" style="background: #1e83db;color: white">
+      <span>อัพโหลด Template ข้อมูลปริมาณการตรวจสอบด้านราคา</span>
+    </div>
+    <div class="ui attached segment {{loading ? 'loading' : ''}}">
+      <form class="ui form" id="upload-form">
+        <!-- row 1 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field ">
+            <label class="text-right full-width">ไฟล์อัปโหลด</label>
+          </div>
+          <div class="four wide field {{loading ? 'loading' : ''}}">
+            <input class="inputfile" type="file" name="fileName" id="fileName" (change)="onChangeUpload($event)" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+              title="อัปโหลด Template ข้อมูลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02)">
+          </div>
+          <div class="three wide field ">
+            <button class="ui mini primary button" (click)="upload()"><i class="upload icon"></i>อัปโหลด</button>
+          </div>
+          <div class="four wide field ">
+
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 </div>
