--- a/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-3/epa01-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-3/epa01-3.component.html
@@ -1,408 +1,67 @@
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-    <span>จัดการข้อมูลต้นทาง</span>
-  </div>
-  
-  <div class="ui attached segment">
-    <div class="ui grid center aligned">
-      <div class="sixteen wide column">
-        <h3>รายงานผลการตรวจส่งออกสินค้า ณ โรงอุตสาหกรรม หรือคลังสินค้า</h3>
-      </div>
+  <span>จัดการข้อมูลต้นทาง</span>
+</div>
+
+<div class="ui attached segment">
+
+  <div class="ui grid center aligned">
+    <div class="sixteen wide column">
+      <h3>รายงานผลการตรวจส่งออกสินค้า ณ โรงอุตสาหกรรม หรือคลังสินค้า</h3>
     </div>
-    <br>
+  </div>
+  <br>
+  <br>
+
+  <div id="exportForm" class="ui form">
     <div class="inline fields">
+      <input type="hidden" id="searchFlag" name="searchFlag">
+      <div class="two wide field "></div>
+      <div class="two wide field ">
+        <label>เลขทะเบียนสรรพสามิต :
+        </label>
+      </div>
       <div class="four wide field ">
-        <h4>ข้อมูลผู้ส่งออก</h4>
+        <input type="text" [(ngModel)]="exciseId">
       </div>
+      <div class="two wide field ">
+        <label>วันที่ขนสินค้าออก :
+        </label>
+      </div>
+      <div class="four wide field ">
+        <input type="text" value="">
+      </div>
+      <div class="two wide field "></div>
     </div>
-    <div class="ui form">
-      <input type="hidden" value="searchFlag">
-      <div class="inline fields">
-        <div class="one wide field "></div>
-        <div class="three wide field ">
-          <label>ชื่อ :</label>
-        </div>
-        <div class="four wide field">
-          <input type="text" value="">
-        </div>
-        <div class="three wide field ">
-          <label>เลขบัตรประชาชน/เลขทะเบียนนิติบุคคล :</label>
-        </div>
-        <div class="four wide field disabled input">
-          <input type="text">
-        </div>
-      </div>
-  
-      <div class="inline fields">
-        <div class="one wide field"></div>
-        <div class="three wide field ">
-          <label>เลขที่สาขาภาษีมูลค่าเพิ่ม (ถ้ามี) :</label>
-        </div>
-        <div class="four wide field">
-          <input type="text">
-        </div>
-      </div>
-  
-      <br>
-      <div class="inline fields">
-        <div class="four wide field ">
-          <h4>ข้อมูลนำสินค้าออก</h4>
-        </div>
-      </div>
-      <div class="inline fields">
-        <div class="one wide field"></div>
-        <div class="three  wide field ">
-          <label>ขอนำสินค้าออกจาก :</label>
-        </div>
-        <div class="four wide field">
-          <input type="text" value="">
-        </div>
-        <div class="three wide field ">
-          <label>ทะเบียนสรรพสามิต :</label>
-        </div>
-        <div class="four wide field">
-          <input type="text" value="">
-        </div>
-      </div>
-  
-      <div class="inline fields">
-        <div class="one wide field"></div>
-        <div class="three wide field ">
-          <label>เพื่อ :</label>
-        </div>
-        <div class="four wide field">
-          <input type="text" value="">
-        </div>
-      </div>
-  
-    </div>
-  
-  </div>
-  
-  <!-- ///// Datatable Segment ///// -->
-  <div class="ui segment" style="width: 100%;">
-  
-    <input type="hidden" [(ngModel)]="exciseId">
-    <table id="dataTable" class="ui small celled table striped selectable" style="width: 100%;">
-      <thead>
-        <tr style="text-align: center;">
-          <th>รายการ</th>
-          <th>หมายเลขการตรวจ</th>
-          <th>ประเภท</th>
-          <th>ชื่อสินค้าและชนิด</th>
-          <th>แบบ/รุ่น</th>
-          <th>ขนาด</th>
-          <th>จำนวน</th>
-          <th>ราคาขายปลีกแนะนำ</th>
-          <th>ภาษีตามมูลค่าร้อยละ </th>
-          <th>ภาษีตามปริมาณ </th>
-          <th>จำนวนภาษี </th>
-          <th>ทำรายการ </th>
-        </tr>
-      </thead>
-    </table>
-  
     <br>
+
     <div class="ui center aligned grid">
       <div class="four wide column">
-        <button class="ui mini button">
+        <button class="ui mini primary button" (click)="onClickSearch()">
+          <i class="search icon"></i>
+          ค้นหา
+        </button>
+        <button class="ui mini button" (click)="onClickClear()">
           ล้างผลการค้นหาทั้งหมด
         </button>
-        <button class="ui mini button" style="width: 100px;">
-          ย้อนกลับ
-        </button>
       </div>
     </div>
-  
+    <br>
   </div>
-  
-  
-  <div class="ui modal" id="ModalCheck" style="width: 90%;">
-  
-    <div class="header" style="background: #1e83db;color: white">
-      การตรวจปล่อยสินค้า
-    </div>
-  
-    <div class="scrolling content" style="height: 600px !important;">
-  
-      <div class="ui form">
-        <div class="ui grid">
-          <!-- column 1 -->
-          <div class="eight wide field" style="text-align: center;">
-            <label>ข้อมูลการตามแบบคำขอยกเว้นหรือคืนภาษี (แบบเลขที่ 1) :</label>
-          </div>
-          <!-- column 2 -->
-          <div class="eight wide field" style="text-align: center;">
-            <label>ข้อมูลการนำสินค้าออกจากโรงอุตสาหกรรม :</label>
-          </div>
-        </div>
-        <hr><br>
-  
-        <div class="inline fields">
-          <!-- column 1 -->
-          <div class="three wide field">
-            <p>ชื่อผุ้ส่งออก :</p>
-          </div>
-          <div class="four wide field">
-            <label></label>
-          </div>
-          <div class="two wide field"></div>
-          <!-- column 2 -->
-          <div class="three wide field">
-            <p>ชื่อผุ้ส่งออก :</p>
-          </div>
-          <div class="four wide field">
-            <input type="text">
-          </div>
-        </div>
-  
-        <div class="inline fields">
-          <!-- column 1 -->
-          <div class="three wide field">
-            <p>สำนักงานสรรพสามิตต้นทาง :</p>
-          </div>
-          <div class="four wide field">
-            <label></label>
-          </div>
-          <div class="two wide field"></div>
-          <!-- column 2 -->
-          <div class="three wide field">
-            <p>สำนักงานสรรพสามิตต้นทาง :</p>
-          </div>
-          <div class="four wide field">
-            <input type="text">
-          </div>
-        </div>
-  
-        <div class="inline fields">
-          <!-- column 1 -->
-          <div class="three wide field">
-            <p>ด่านส่งออกสินค้าปลายทาง :</p>
-          </div>
-          <div class="four wide field">
-            <label>สำนักงานสรรพสามิต</label>
-          </div>
-          <div class="two wide field"></div>
-          <!-- column 2 -->
-          <div class="three wide field">
-            <p>ด่านส่งออกสินค้าปลายทาง :</p>
-          </div>
-          <div class="four wide field">
-            <input type="text">
-          </div>
-        </div>
-  
-        <div class="inline fields">
-          <!-- column 1 -->
-          <div class="three wide field">
-            <p>สำนักงานสรรพสามิตปลายทาง :</p>
-          </div>
-          <div class="four wide field">
-            <label>สำนักงานสรรพสามิต</label>
-          </div>
-          <div class="two wide field"></div>
-          <!-- column 2 -->
-          <div class="three wide field">
-            <p>สำนักงานสรรพสามิตปลายทาง :</p>
-          </div>
-          <div class="four wide field">
-            <input type="text">
-          </div>
-        </div>
-  
-        <div class="inline fields">
-          <!-- column 1 -->
-          <div class="three wide field">
-            <p>วันที่นำสินค้าออก :</p>
-          </div>
-          <div class="four wide field">
-            <label></label>
-          </div>
-          <div class="two wide field"></div>
-          <!-- column 2 -->
-          <div class="three wide field">
-            <p>วันที่นำสินค้าออก :</p>
-          </div>
-          <div class="four wide field">
-            <input type="text">
-          </div>
-        </div>
-  
-        <div class="inline fields">
-          <!-- column 1 -->
-          <div class="three wide field">
-            <p>ชนิดของสินค้า :</p>
-          </div>
-          <div class="four wide field">
-            <label></label>
-          </div>
-          <div class="two wide field"></div>
-          <!-- column 2 -->
-          <div class="three wide field">
-            <p>ชนิดของสินค้า :</p>
-          </div>
-          <div class="four wide field">
-            <input type="text">
-          </div>
-        </div>
-  
-        <div class="inline fields">
-          <!-- column 1 -->
-          <div class="three wide field">
-            <p>ปริมาณของสินค้า :</p>
-          </div>
-          <div class="four wide field">
-            <label></label>
-          </div>
-          <div class="two wide field"></div>
-          <!-- column 2 -->
-          <div class="three wide field">
-            <p>ปริมาณของสินค้า :</p>
-          </div>
-          <div class="four wide field">
-            <input type="text">
-          </div>
-        </div>
-  
-        <div class="inline fields">
-          <!-- column 1 -->
-          <div class="three wide field">
-            <p>ชื่อหรือเลขทะเบียนพาหนะ :</p>
-          </div>
-          <div class="four wide field">
-            <label>-</label>
-          </div>
-          <div class="two wide field"></div>
-          <!-- column 2 -->
-          <div class="three wide field">
-            <p>ชื่อหรือเลขทะเบียนพาหนะ :</p>
-          </div>
-          <div class="four wide field">
-            <input type="text">
-          </div>
-        </div>
-  
-        <div class="inline fields">
-          <!-- column 1 -->
-          <div class="three wide field">
-            <p>เส้นทางการขนส่ง :</p>
-          </div>
-          <div class="four wide field">
-            <label>-</label>
-          </div>
-          <div class="two wide field"></div>
-          <!-- column 2 -->
-          <div class="three wide field">
-            <p>เส้นทางการขนส่ง :</p>
-          </div>
-          <div class="four wide field">
-            <input type="text">
-          </div>
-        </div>
-        <hr>
-        <br>
-  
-        <div class="ui grid">
-          <!-- column 1 -->
-          <div class="eight wide field" style="text-align: center;">
-            <label>จำนวนและหมายเลขดวงตรากรมสรรพสามิต :</label>
-          </div>
-          <!-- column 2 -->
-          <div class="eight wide field" style="text-align: center;">
-            <label>จำนวนและหมายเลขดวงตรากรมสรรพสามิต :</label>
-          </div>
-        </div>
-        <br>
-  
-        <div class="ui grid">
-          <div class="two column row">
-            <!-- column 1 Tax Stamp -->
-            <div class="column">
-  
-              <div class="inline fields">
-                <div class="two wide field">
-                  <p>ดวงที่</p>
-                </div>
-                <div class="eight wide field">
-                  <input type="text">
-                </div>
-                <div class="four wide field">
-                  <button class="ui mini green button">
-                    <i class="plus icon"></i>
-                    เพิ่ม
-                  </button>
-                  <button class="ui mini red button">
-                    ลบ
-                  </button>
-                </div>
-              </div>
-  
-            </div>
-            <!-- column 2 Factory Stamp -->
-            <div class="column">
-  
-              <div class="inline fields">
-                <div class="two wide field"></div>
-                <div class="two wide field">
-                  <p>ดวงที่</p>
-                </div>
-                <div class="eight wide field">
-                  <input type="text">
-                </div>
-                <div class="four wide field">
-                  <button class="ui mini green button">
-                    <i class="plus icon"></i>
-                    เพิ่ม
-                  </button>
-                  <button class="ui mini red button">
-                    ลบ
-                  </button>
-                </div>
-              </div>
-  
-            </div>
-          </div>
-        </div>
-        <hr>
-        <br>
-  
-        <!-- Radio Box -->
-        <div class="ui grid center aligned">
-          <div class="inline fields">
-            <label>ผลการตรวจ:</label>
-            <div class="field">
-              <div class="ui radio checkbox">
-                <input type="radio" name="result" value="1">
-                <label>ผ่าน</label>
-              </div>
-            </div>
-            <div class="field">
-              <div class="ui radio checkbox">
-                <input type="radio" name="result" value="0">
-                <label>ไม่ผ่าน</label>
-              </div>
-            </div>
-          </div>
-        </div>
-  
-        <!-- Comment Box -->
-        <div class="ui grid center aligned">
-          <div class="fields">
-            <textarea rows="5" cols="100"></textarea>
-          </div>
-        </div>
-  
-      </div>
-    </div>
-  
-    <div class="actions">
-      <div class="ui primary button">
-        <i class="save icon"></i>
-        บันทึกข้อมูลการตรวจ
-      </div>
-      <div class="ui icon deny button">
-        <i class="close icon"></i>
-        ยกเลิกการบันทึกข้อมูล
-      </div>
-    </div>
-  
-  </div>
+
+</div>
+
+<!-- ///// Datatable Segment ///// -->
+<div class="ui segment {{loading ? 'loading' : ''}}" style="width: 100%;">
+  <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%;">
+    <thead>
+      <tr>
+        <th style="text-align: center !important;">ลำดับที่</th>
+        <th style="text-align: center !important;">ออกจากโรงอุตสาหกรรม/คลังสินค้า</th>
+        <th style="text-align: center !important;">ด่านศุลกากรปลายทาง</th>
+        <th style="text-align: center !important;">วันที่ออกจากโรงอุตสาหกรรม/คลังสินค้า</th>
+        <th style="text-align: center !important;">วันที่ถึงด่านศุลกากร</th>
+        <th style="text-align: center !important;">ทำรายการ</th>
+      </tr>
+    </thead>
+  </table>
+</div>
